--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-866.0KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇸🇬 新加坡-1.67MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-20.17MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
-  - {name: 🇮🇳 印度-1.63MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-723.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-218.5KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇸🇬 新加坡-292.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
   - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.62MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-866.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
