--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-723.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-218.5KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇸🇬 新加坡-292.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.62MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇭🇰 香港-20.17MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
+  - {name: 🇯🇵 日本-4.61MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-700.9KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: ed8a43ac-b02b-4026-a101-f4df7c35e480, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: v19.emovpn.xyz, port: 127, type: vmess, uuid: bfe9cd16-1c95-4cf8-9ec2-c18fb08f9f68, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v19.emovpn.xyz}}
+  - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: v19.emovpn.xyz, port: 127, type: vmess, uuid: f813fe78-8159-4aa3-b363-cb82183776f7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v19.emovpn.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-292.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-20.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-700.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
