--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-247.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: ed8a43ac-b02b-4026-a101-f4df7c35e480, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: v19.emovpn.xyz, port: 127, type: vmess, uuid: bfe9cd16-1c95-4cf8-9ec2-c18fb08f9f68, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v19.emovpn.xyz}}
-  - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-187.1KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
   - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: v19.emovpn.xyz, port: 127, type: vmess, uuid: f813fe78-8159-4aa3-b363-cb82183776f7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v19.emovpn.xyz}}
   - {name: 🇫🇷 法国-712.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-1.17MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.14MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-247.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-187.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
       - 🇫🇷 法国-712.6KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
